<resources>
    <string name="app_name">ProyectoFase1</string>
    <!-- Strings related to login -->
    <string name="email">Correo</string>
    <string name="registrate">Regístrate</string>
    <string name="registrame">Regístrame</string>
    <string name="vendeCons">Perfil: Vendedor y consumidor</string>
    <string name="username">Nombres y Apellidos</string>
    <string name="contraseña">Contraseña</string>
    <string name="numero">WhatsApp</string>
    <!--Universidad -->
    <string name="campus">Campus</string>
    <string name="sambo">Samborondón</string>
    <string name="costa">Vía a la Costa</string>
    <string name="jtm">Juan Tanca Marengo</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>